--- a/index.css
+++ b/index.css
@@ -172,7 +172,7 @@ main {
 	flex-direction: column;
 }
 #bolas {
-	height: 25%;
+	height: 40%;
 	width: 700px;
 	display: flex;
 	margin: auto;
@@ -192,11 +192,28 @@ main {
 	height: 100%;
 	width: 80%;
 }
+
+.divCarton {
+	background-color: red;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.tablerof {
+	width: 100%;
+	height: 20px;
+	display: flex;
+	justify-content: center;
+	
+
+}
+.tablerof div {
+	margin-left: 20px;
+}
 #tablero {
 	height: 100%;
 	width: 500px;
 	background-color: azure;
-	margin-right: 10px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -211,8 +228,13 @@ main {
 	align-items: center;
 }
 #divBoton {
-	background-color: red;
 	margin-top: 20px;
+	height: 50px;
+}
+button {
+	height: 100%;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 button:hover {
 	cursor: pointer;
@@ -230,6 +252,10 @@ button:hover {
 	margin-top: 20px;
 }
 /*--------MAIN---------*/
+
+
+
+
 /*-------ELEMENTOS DINAMICOS-------*/
 .divCarton {
 	width: 60vw;
