--- a/index.css
+++ b/index.css
@@ -200,11 +200,11 @@ main {
 	background-color: transparent;
 	height: 96%;
 	width: 99%;
-	border: 3px solid black;
+	border: 4px solid rgb(17, 145, 23);
+	border-radius: 10px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 	flex-wrap: wrap; /* Cambiado a nowrap para que no haya wrap */
 }
 
@@ -252,6 +252,13 @@ main {
 }
 button {
 	margin: 5px;
+	background-color: white;
+	font-weight: bold;
+	color: rgb(218, 6, 6);
+	text-shadow: 1px 1px rgb(114, 57, 57);
+	border: 2px solid rgb(17, 145, 23);
+	border-radius: 10px;
+	
 }
 button:hover {
 	cursor: pointer;
@@ -283,11 +290,11 @@ button:hover {
 	
 }
 .carton {
-    background-color: antiquewhite;
+    background-color: rgb(135, 0, 0);
     height: 300px;
     width: 600px;
     margin-top: 30px;
-	border: 2px solid black;
+	border: 4px solid rgb(17, 145, 23);
 	border-radius: 10px;	
 	overflow-y: hidden;
 	
@@ -322,8 +329,14 @@ button:hover {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	border: 2px solid black;
+	border: 2px solid rgb(255, 255, 255);
 	font-size: 40px;
 	font-weight: bold;
-
+	color: black;
+}
+#pos1,#pos2,#pos3,#pos4,#pos5,#pos6,#pos7,#pos8,#pos9,
+#pos10,#pos11,#pos12,#pos13,#pos14{
+	background-color: white;
+	color: rgb(0, 0, 0);
+	text-shadow: 1px 1px;
 }
