--- a/index.css
+++ b/index.css
@@ -224,23 +224,32 @@ main {
 	margin: 0; /* Añadido para eliminar el margen por defecto del párrafo */
 }
 
-
 #bolaActual {
-	height: 100%;
-	width: 15%;
+	background-color: aqua;
+	height: 90%;
+	width: 10%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	
 }
 #bola {
-	background-color: rgb(121, 86, 86);
-	height: 100px;
-	width: 100px;
+	background-color: aliceblue;
+	width: 60px;
+	height: 60px;
 	border-radius: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 2px solid black;
 }
 #bolita {
-	background-color: red;
+	font-size: 25px;
+	font-weight: bold;
 }
+
+
+
 #divBoton {
 	margin-top: 40px;
 	height: 80px;
